# bot-tools-mcp

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
docs/: BUILD_PLAN.md  DEPLOY_AND_SMOKE_TEST.md  PROJECT_STATE.md  README.md
src/bot_tools_mcp/: __init__.py  _util.py  caldav_client.py  email_smtp.py  identity.py  nextcloud_client.py  server.py
src/bot_tools_mcp/tools/: __init__.py  calendar_tools.py  docs.py  email_tools.py
tests/: test_calendar.py  test_docs.py  test_email.py  test_identity.py  test_server.py
