[project]
name = "bot-tools-mcp"
version = "0.1.0"
description = "Shared HTTP MCP server giving LAN bots email (Brevo), calendar (Radicale) and docs/sheets (Nextcloud) tools, with per-bot bearer-token identity. Sibling service to Audrey; zero Google."
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "aiosmtplib>=3.0",
    "icalendar>=6.0",
    "caldav>=1.3",
    "httpx>=0.27",
    "openpyxl>=3.1",
    "python-docx>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bot_tools_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
